# Xviz3D

./: CMakeLists.txt  build_debug.bat  build_release.bat  rebuild_debug.bat  rebuild_release.bat  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/app/: app.cpp  app.h
src/basis/: defines.h  input.h  key_codes.h  logger.h  timestep.h  xviz_time.h
src/camera/: perspective_camera.cpp  perspective_camera.h  perspective_camera_controller.cpp  perspective_camera_controller.h
src/event/: application_event.h  event.h  key_event.h  mouse_event.h
src/graphics/: framebuffer.cpp  framebuffer.h  gl_shader.cpp  gl_shader.h  mesh.cpp  mesh.h  shader.h
src/layer/: imgui_layer.cpp  imgui_layer.h  layer.h  layer_stack.cpp  layer_stack.h  ui_context.h
src/opengl/: opengl_framebuffer.cpp  opengl_framebuffer.h  opengl_texture.cpp  opengl_texture.h
src/renderer/: renderer.cpp  renderer.h  shaders_conrainer.cpp  shaders_conrainer.h
src/resources/: shared_resources.cpp  shared_resources.h
src/scene/: camera.cpp  camera.h  scene.h
src/shader/: shader.cpp  shader.h  shader_manager.cpp  shader_manager.h  shader_program.cpp  shader_program.h
src/ui/: base_layer.h  main_layer.cpp  main_layer.h
src/window/: window.cpp  window.h  window_input.cpp  window_input.h
